cmake_minimum_required(VERSION 3.19)
project(Baekjoon_Algorithm)

set(CMAKE_CXX_STANDARD 14)
add_executable(2447 2447.cpp)
add_executable(25083 25083.cpp)
add_executable(24479 24479.cpp)
add_executable(1005 1005.cpp)
add_executable(16928 16928.cpp)
add_executable(13460 13460.cpp)
add_executable(12852 12852.cpp)
add_executable(12865 12865.cpp)
add_executable(9613 9613.cpp)
add_executable(2512 2512.cpp)
add_executable(1182 1182.cpp)
add_executable(1931 1931.cpp)