cmake_minimum_required(VERSION 3.19)
project(Baekjoon_Algorithm)

set(CMAKE_CXX_STANDARD 14)
add_executable(2447 2447.cpp)
add_executable(25083 25083.cpp)
add_executable(24479 24479.cpp)
add_executable(1005 1005.cpp)
add_executable(16928 16928.cpp)
add_executable(13460 13460.cpp)
add_executable(12852 12852.cpp)
add_executable(12865 12865.cpp)
add_executable(9613 9613.cpp)
add_executable(2512 2512.cpp)
add_executable(1182 1182.cpp)
add_executable(1931 1931.cpp)
add_executable(1541 1541.cpp)
add_executable(1009 1009.cpp)
add_executable(13305 13305.cpp)
add_executable(4796 4796.cpp)
add_executable(11000 11000.cpp)
add_executable(2217 2217.cpp)
add_executable(5585 5585.cpp)
add_executable(1789 1789.cpp)
add_executable(2670 2670.cpp)
add_executable(12862 12862.cpp)
add_executable(7579 7579.cpp)
add_executable(17413 17413.cpp)
add_executable(20040 20040.cpp)